syntax = "proto3";

package pb;

import "numberMsg.proto";

option go_package = "./pb";

service ArithmeticService {
  rpc GetAddition(OperationParameters) returns (Answer) {}
  rpc GetSubstraction(OperationParameters) returns (Answer) {}
  rpc GetMultiplication(OperationParameters) returns (Answer) {}
  rpc GetDivision(OperationParameters) returns (Answer) {}
}

